--- a/SpaceTrader/app/src/main/res/layout/content_create_player.xml
+++ b/SpaceTrader/app/src/main/res/layout/content_create_player.xml
@@ -2,13 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_create_player"
+    android:id="@+id/content_edit_student"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
 
-
-    app:layout_behavior="android.support.design.widget.AppBarLayout.ScrollingViewBehavior"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="edu.gatech.cs2340.SpaceTrader.views.CreatePlayer"
     tools:showIn="@layout/activity_create_player">
 
