--- a/SpaceTrader/app/src/main/res/layout/activity_main.xml
+++ b/SpaceTrader/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/space"
-    tools:context=".views.MainActivity">
+    tools:context="edu.gatech.cs2340.SpaceTrader.views.MainActivity">
 
     <TextView
         android:id="@+id/textView"
