change + and - to  up arrow, down arrow

--- a/SpaceTrader/app/src/main/res/layout/content_create_player.xml
+++ b/SpaceTrader/app/src/main/res/layout/content_create_player.xml
@@ -21,6 +21,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginTop="38dp" />
 
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -60,8 +61,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
         android:onClick="onAddPressed" />
 
     <Button
@@ -72,8 +73,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
         android:id="@+id/cancel_button"
         android:onClick="onCancelPressed" />
 
@@ -84,9 +85,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="64dp"
-        android:layout_marginLeft="64dp"
-        android:layout_marginTop="384dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginLeft="34dp"
+        android:layout_marginTop="344dp"
         android:text="@string/skill1" />
 
     <TextView
@@ -97,24 +98,32 @@
         android:layout_toRightOf="@+id/pilot_header"
         android:ems="2"
         android:inputType="number"
-        android:text="0"/>
+        />
 
-    <Button
+
+    <ImageButton
         android:id="@+id/pilot_button_up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_below="@+id/pilot_header"
-        android:text="+"
-        android:onClick="onPilotUpPressed"/>
+        android:onClick="onPilotUpPressed"
+        android:background="@android:color/background_light"
+        android:src="@drawable/inc_arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/pilot_button_down"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/pilot_button_up"
         android:layout_alignTop="@+id/pilot_button_up"
-        android:text="-"
-        android:onClick="onPilotDownPressed"/>
+        android:onClick="onPilotDownPressed"
+        android:background="@android:color/background_light"
+        android:src="@drawable/dec_arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"/>
+
 
     <TextView
         android:id="@+id/fighter_header"
@@ -123,9 +132,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="384dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginRight="64dp"
+        android:layout_marginTop="344dp"
+        android:layout_marginEnd="94dp"
+        android:layout_marginRight="94dp"
         android:text="@string/skill2" />
 
     <TextView
@@ -133,32 +142,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/fighter_header"
-        android:layout_toLeftOf="@+id/fighter_header"
+        android:layout_toRightOf="@+id/fighter_header"
         android:ems="2"
         android:inputType="number"
-        android:text="0"/>
+        />
 
-    <Button
+
+    <ImageButton
         android:id="@+id/fighter_button_up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_below="@+id/fighter_header"
         android:layout_alignStart="@+id/pilot_button_up"
         android:layout_alignLeft="@+id/pilot_button_up"
         android:layout_marginStart="196dp"
         android:layout_marginLeft="196dp"
         android:layout_marginTop="0dp"
-        android:text="+"
-        android:onClick="onFighterUpPressed"/>
+        android:onClick="onFighterUpPressed"
+        android:background="@android:color/background_light"
+        android:src="@drawable/inc_arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/fighter_button_down"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/fighter_button_up"
         android:layout_alignTop="@+id/fighter_button_up"
-        android:text="-"
-        android:onClick="onFighterDownPressed"/>
+        android:onClick="onFighterDownPressed"
+        android:background="@android:color/background_light"
+        android:src="@drawable/dec_arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/trader_header"
@@ -167,9 +183,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="64dp"
-        android:layout_marginLeft="64dp"
-        android:layout_marginTop="512dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="442dp"
         android:text="@string/skill3" />
 
     <TextView
@@ -180,24 +196,31 @@
         android:layout_toRightOf="@+id/trader_header"
         android:ems="2"
         android:inputType="number"
-        android:text="0"/>
+        />
 
-    <Button
+
+    <ImageButton
         android:id="@+id/trader_button_up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_below="@+id/trader_header"
-        android:text="+"
-        android:onClick="onTraderUpPressed"/>
+        android:onClick="onTraderUpPressed"
+        android:background="@android:color/background_light"
+        android:src="@drawable/inc_arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/trader_button_down"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/trader_button_up"
         android:layout_alignTop="@+id/trader_button_up"
-        android:text="-"
-        android:onClick="onTraderDownPressed"/>
+        android:onClick="onTraderDownPressed"
+        android:background="@android:color/background_light"
+        android:src="@drawable/dec_arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/engineer_header"
@@ -206,9 +229,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="512dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginRight="64dp"
+        android:layout_marginTop="442dp"
+        android:layout_marginEnd="94dp"
+        android:layout_marginRight="94dp"
         android:text="@string/skill4" />
 
     <TextView
@@ -216,32 +239,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/engineer_header"
-        android:layout_toLeftOf="@+id/engineer_header"
+        android:layout_toRightOf="@+id/engineer_header"
         android:ems="2"
         android:inputType="number"
-        android:text="0"/>
+        />
 
-    <Button
+
+    <ImageButton
         android:id="@+id/engineer_button_up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_below="@+id/engineer_header"
         android:layout_alignStart="@+id/trader_button_up"
         android:layout_alignLeft="@+id/trader_button_up"
-        android:layout_marginStart="192dp"
-        android:layout_marginLeft="192dp"
+        android:layout_marginStart="196dp"
+        android:layout_marginLeft="196dp"
         android:layout_marginTop="0dp"
-        android:text="+"
-        android:onClick="onEngineerUpPressed"/>
+        android:onClick="onEngineerUpPressed"
+        android:background="@android:color/background_light"
+        android:src="@drawable/inc_arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/engineer_button_down"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/engineer_button_up"
         android:layout_alignTop="@+id/engineer_button_up"
-        android:text="-"
-        android:onClick="onEngineerDownPressed"/>
+        android:onClick="onEngineerDownPressed"
+        android:background="@android:color/background_light"
+        android:src="@drawable/dec_arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/remaining_header"
@@ -250,9 +280,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="128dp"
-        android:layout_marginLeft="128dp"
-        android:layout_marginTop="288dp"
+        android:layout_marginStart="118dp"
+        android:layout_marginLeft="118dp"
+        android:layout_marginTop="298dp"
         android:text="@string/remaining" />
 
     <TextView
@@ -263,7 +293,7 @@
         android:layout_toRightOf="@+id/remaining_header"
         android:ems="2"
         android:inputType="number"
-        android:text="0"/>
+        />
 
 
 </RelativeLayout>
