adds error checking + confirm screen
- now displays a toast saying 'invalid character creation' when invalid point combination is entered, and does NOT create player
- correct add goes to profile screen, which displays: name, difficulty, credits, ship name, and 4 skill point values. 
- added credits (just an int) to player class
- added ship (placeholder, just a string rn) to player class
- getPlayer method added to viewmodel/interactor/etc. which allows outside classes to access player values from allPlayers arraylist.

--- a/SpaceTrader/app/src/main/res/layout/activity_main.xml
+++ b/SpaceTrader/app/src/main/res/layout/activity_main.xml
@@ -20,13 +20,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.243" />
+
     <Button
         android:id="@+id/ready_player_one"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="115dp"
-        android:layout_marginLeft="115dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginLeft="128dp"
+        android:layout_marginTop="196dp"
         android:text="Ready Player One"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -35,12 +36,16 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginLeft="128dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginLeft="144dp"
         android:layout_marginTop="124dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="Watersgate"
         android:textColor="@color/design_default_color_primary"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ready_player_one" />
 
