--- a/SpaceTrader/app/src/main/res/layout/activity_player_confirm.xml
+++ b/SpaceTrader/app/src/main/res/layout/activity_player_confirm.xml
@@ -8,13 +8,13 @@
 
     <TextView
         android:id="@+id/Profile"
-        android:layout_width="66dp"
-        android:layout_height="32dp"
-        android:layout_marginEnd="172dp"
-        android:layout_marginRight="172dp"
+        android:layout_width="119dp"
+        android:layout_height="49dp"
+        android:layout_marginEnd="144dp"
+        android:layout_marginRight="144dp"
         android:text="Profile"
         android:textColor="@color/design_default_color_primary"
-        android:textSize="20sp"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -24,7 +24,7 @@
     <TextView
         android:id="@+id/nameText"
         android:layout_width="228dp"
-        android:layout_height="28dp"
+        android:layout_height="26dp"
         android:layout_marginEnd="124dp"
         android:layout_marginRight="124dp"
         android:text="@string/player_name_blank"
@@ -119,9 +119,22 @@
         android:text="@string/engineerSkillText_blank"
         android:textColor="@color/design_default_color_primary"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/game_button"
         app:layout_constraintStart_toStartOf="@+id/traderSkillText"
         app:layout_constraintTop_toBottomOf="@+id/traderSkillText"
         app:layout_constraintVertical_bias="0.452" />
+
+    <Button
+        android:id="@+id/game_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="144dp"
+        android:layout_marginRight="144dp"
+        android:text="Go To Game"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/engineerSkillText"
+        app:layout_constraintTop_toBottomOf="@+id/engineerSkillText" />
 
 </android.support.constraint.ConstraintLayout>
