Random Planet Names
Planets now have a random name pulled from the planetNames.xml file when generated

--- a/SpaceTrader/app/src/main/res/values/planetNames.xml
+++ b/SpaceTrader/app/src/main/res/values/planetNames.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="planetsArray">
-        <item>Acamar</item>
-        <item>Adahn</item>
-        <item>Aldea</item>
-        <item>Andevian</item>
-        <item>Antedi</item>
-        <item>Balosnee</item>
-        <item>Baratas</item>
-        <item>Brax</item>
-        <item>Bretel</item>
-        <item>Calondia</item>
-        <item>Campor</item>
-        <item>Capelle</item>
-        <item>Carzon</item>
-        <item>Castor</item>
-        <item>Cestus</item>
-        <item>Cheron</item>
-        <item>Courteney</item>
-        <item>Daled</item>
-        <item>Damast</item>
-        <item>Davlos</item>
-        <item>Deneb</item>
-        <item>Deneva</item>
-        <item>Devidia</item>
-        <item>Draylon</item>
-        <item>Drema</item>
-        <item>Endor</item>
-        <item>Esmee</item>
-        <item>Exo</item>
+    <string-array name="planetNames">
+        <string>Acamar</string>
+        <string>Adahn</string>
+        <string>Aldea</string>
+        <string>Andevian</string>
+        <string>Antedi</string>
+        <string>Balosnee</string>
+        <string>Baratas</string>
+        <string>Brax</string>
+        <string>Bretel</string>
+        <string>Calondia</string>
+        <string>Campor</string>
+        <string>Capelle</string>
+        <string>Carzon</string>
+        <string>Castor</string>
+        <string>Cestus</string>
+        <string>Cheron</string>
+        <string>Courteney</string>
+        <string>Daled</string>
+        <string>Damast</string>
+        <string>Davlos</string>
+        <string>Deneb</string>
+        <string>Deneva</string>
+        <string>Devidia</string>
+        <string>Draylon</string>
+        <string>Drema</string>
+        <string>Endor</string>
+        <string>Esmee</string>
+        <string>Exo</string>
     </string-array>
 </resources>
