--- a/SpaceTrader/app/src/main/res/layout/planet_screen.xml
+++ b/SpaceTrader/app/src/main/res/layout/planet_screen.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="edu.gatech.cs2340.SpaceTrader.views.Planet">
+        tools:context="edu.gatech.cs2340.SpaceTrader.views.PlanetScreen">
 
     <TextView
         android:id="@+id/textView"
