--- a/SpaceTrader/app/src/main/res/layout/planet_screen.xml
+++ b/SpaceTrader/app/src/main/res/layout/planet_screen.xml
@@ -22,6 +22,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.097" />
 
+    <TextView
+        android:id="@+id/nameText"
+        android:layout_width="227dp"
+        android:layout_height="54dp"
+        android:text="Default Planet Name"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.212" />
+
     <Button
         android:id="@+id/toMarket"
         android:layout_width="135dp"
